fix: resolve layout shift if no games

--- a/src/public/css/games.css
+++ b/src/public/css/games.css
@@ -6,6 +6,7 @@ main {
 }
 
 .main-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 22px;
